--- a/.github/workflows/gatsby.yml
+++ b/.github/workflows/gatsby.yml
@@ -9,8 +9,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v1
       - uses: enriikke/gatsby-gh-pages-action@v2
         with:
-          access-token: ${{ secrets.TOKEN_GITHUB }}
-          deploy-branch: gh-pages
+          access-token: x-access-token:${{ secrets.GITHUB_TOKEN }}
+          deploy-branch: master
