--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "gatsby-image": "^3.11.0",
     "gatsby-link": "^5.13.1",
     "gatsby-plugin-easter-egg": "^1.0.0",
+    "gatsby-plugin-feed": "^5.13.1",
     "gatsby-plugin-google-gtag": "^5.13.1",
     "gatsby-plugin-image": "^3.13.1",
     "gatsby-plugin-manifest": "^5.13.1",
