--- a/package.json
+++ b/package.json
@@ -18,15 +18,12 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "deploy": "gatsby build && gh-pages -d public --cname rubiin.is-a.dev"
+    "deploy": "gatsby build && gh-pages -d public --cname rubiin.is-a.dev",
+    "prepare": "husky"
   },
   "lint-staged": {
     "*.{js,css,json,md}": [
       "prettier --write",
-      "git add"
-    ],
-    "*.js": [
-      "eslint --fix",
       "git add"
     ]
   },
