--- a/package.json
+++ b/package.json
@@ -44,7 +44,9 @@
     "gatsby-plugin-manifest": "^5.13.1",
     "gatsby-plugin-netlify": "^5.1.1",
     "gatsby-plugin-offline": "^6.13.2",
+    "gatsby-plugin-postcss": "^6.13.1",
     "gatsby-plugin-react-helmet": "^6.13.1",
+    "gatsby-plugin-robots-txt": "^1.8.0",
     "gatsby-plugin-sharp": "^5.13.1",
     "gatsby-plugin-sitemap": "^6.13.1",
     "gatsby-plugin-styled-components": "^6.13.1",
@@ -57,6 +59,7 @@
     "gatsby-transformer-sharp": "^5.13.1",
     "gh-pages": "^6.1.1",
     "lodash": "^4.17.21",
+    "postcss": "^8.4.41",
     "prismjs": "^1.29.0",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
