--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "gatsby-plugin-sitemap": "^6.13.1",
     "gatsby-plugin-styled-components": "^6.13.1",
     "gatsby-react-router-scroll": "^6.13.1",
+    "gatsby-remark-autolink-headers": "^6.13.1",
     "gatsby-remark-external-links": "0.0.4",
     "gatsby-remark-images": "^7.13.1",
     "gatsby-remark-prismjs": "^7.13.1",
