--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@babel/core": "^7.25.2",
     "@babel/eslint-parser": "^7.25.1",
     "@babel/preset-react": "^7.24.7",
+    "@emotion/is-prop-valid": "^1.3.0",
     "animejs": "^3.2.2",
     "babel-plugin-styled-components": "^2.1.4",
     "babel-preset-gatsby": "^3.13.2",
@@ -38,6 +39,7 @@
     "gatsby": "^5.13.7",
     "gatsby-image": "^3.11.0",
     "gatsby-link": "^5.13.1",
+    "gatsby-plugin-disqus": "^1.2.6",
     "gatsby-plugin-easter-egg": "^1.0.0",
     "gatsby-plugin-feed": "^5.13.1",
     "gatsby-plugin-google-gtag": "^5.13.1",
@@ -57,6 +59,7 @@
     "gatsby-remark-external-links": "0.0.4",
     "gatsby-remark-images": "^7.13.1",
     "gatsby-remark-prismjs": "^7.13.1",
+    "gatsby-remark-responsive-iframe": "^6.13.1",
     "gatsby-source-filesystem": "^5.13.1",
     "gatsby-transformer-remark": "^6.13.1",
     "gatsby-transformer-sharp": "^5.13.1",
