--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@babel/core": "^7.25.2",
     "@babel/eslint-parser": "^7.25.1",
     "@babel/preset-react": "^7.24.7",
+    "@emotion/is-prop-valid": "^1.3.0",
     "animejs": "^3.2.2",
     "babel-plugin-styled-components": "^2.1.4",
     "babel-preset-gatsby": "^3.13.2",
