--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "gatsby": "^5.13.7",
     "gatsby-image": "^3.11.0",
     "gatsby-link": "^5.13.1",
+    "gatsby-plugin-catch-links": "^5.13.1",
     "gatsby-plugin-disqus": "^1.2.6",
     "gatsby-plugin-easter-egg": "^1.0.0",
     "gatsby-plugin-feed": "^5.13.1",
